# hakathon_2

phase-1/: .gitignore  README.md  pyproject.toml  requirements.txt
phase-1/.gemini/tmp/: feature_description.txt
phase-1/history/prompts/001-todo-cli-app/: 0002-create-to-do-cli-application-specification.spec.prompt.md  0003-create-technical-plan-for-to-do-cli.plan.prompt.md  0004-create-implementation-tasks-for-to-do-cli.tasks.prompt.md
phase-1/specs/001-todo-cli-app/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/specs/001-todo-cli-app/checklists/: requirements.md
phase-1/specs/001-todo-cli-app/contracts/: cli-interface.md
phase-1/src/: __init__.py  database.py  main.py
phase-1/tests/: test_main.py
phase-2/: .gitignore  README.md
phase-2-UI/.specify/memory/: constitution.md
phase-2-UI/backend/: .env.example  .gitignore  Dockerfile  README.md  Spacefile  build.sh  railway.json  render.yaml  requirements.txt
phase-2-UI/backend/.space/: meta
phase-2-UI/backend/app/: __init__.py
phase-2-UI/backend/tests/: __init__.py  test_auth.py
phase-2-UI/frontend/: .env.local.example  .env.production  .gitignore
phase-2-UI/frontend/src/: middleware.ts
phase-2-UI/specs/002-todolist-pro-ui/: quickstart.md  spec.md  tasks.md
phase-2-UI/todolist-pro/: package-lock.json  package.json
phase-2/backend/: .env.example  main.py  requirements.txt
phase-2/frontend/: next.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
phase-3/backend/: Spacefile  pyproject.toml
phase-3/backend/.space/: meta
phase-3/backend/alembic/: env.py
phase-3/backend/alembic/versions/: 001_create_tasks_table.py
phase-3/backend/app/: config.py  database.py  main.py
phase-3/backend/app/api/: __init__.py
phase-3/backend/app/api/routes/: health.py  tasks.py
phase-3/backend/app/models/: task.py
phase-3/backend/app/schemas/: error.py
phase-3/backend/tests/: conftest.py  test_health.py  test_tasks.py
phase-3/frontend/: package-lock.json  package.json
todo_cli/: requirements.txt
todo_cli/src/: database.py  main.py  models.py
todo_cli/tests/: test_main.py
(+191 files in other folders)
